--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -57,7 +57,7 @@
     </div>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-toggle="collapse" href="#stock" aria-expanded="false" aria-controls="tables">
+    <a class="nav-link" data-toggle="collapse" href="#stock" aria-expanded="false" aria-controls="stock">
       <i class="mdi mdi-home  menu-icon"></i>
       <span class="menu-title">Stock</span>
       <i class="menu-arrow"></i>
