--- a/core/templates/vista_producto.html
+++ b/core/templates/vista_producto.html
@@ -91,8 +91,10 @@
           </div>
           <div class="col-md-6">
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Futuro uso</label>
+              <label class="col-sm-3 col-form-label">Unidad de medida</label>
               <div class="col-sm-9">
+                {{form.um}}
+                {{form.um.errors}}
               </div>
             </div>
           </div>
