--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -35,39 +35,22 @@
     </div>
     <div class="col-md-6 grid-margin transparent">
       <div class="row">
-        {% for campo in campos_con_lotes_1 %}
+        {% for lote in datos_cultivo %}
             <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
-                {% if forloop.counter == 1 %}
-                    <div class="card card-light-blue">
-                {% elif forloop.counter == 2 %}
-                    <div class="card card-light-danger">
-                {% endif %}
+                    <div class="card {% if forloop.counter0|add:'0'|divisibleby:4 %}card-tale{% endif %}{% if forloop.counter0|add:'-1'|divisibleby:4 %}card-dark-blue{% endif %}{% if forloop.counter0|add:'-2'|divisibleby:4 %}card-light-blue{% endif %}{% if forloop.counter0|add:'-3'|divisibleby:4 %}card-light-danger{% endif %}">
                     <div class="card-body">
-                        <p class="mb-4">{{ campo.campo.nombre }}</p>
-                        <p class="fs-30 mb-2">{{ campo.lotes.0.ha_productivas }}</p>
-                        <p>{{ campo.lotes.0.ha_totales }} ({{ campo.lotes.0.porcentaje }}%)</p>
+                      <p class="mb-4">Campo: {{ lote.lote.campo.nombre }} - Lote: {{lote.lote.nombre}}</p>
+                      {% if lote.encontre %}
+                        <p class="fs-30 mb-2">{{ lote.estado.cultivo.nombre }}</p>
+                        <p>Desde: {{ lote.estado.fecha_desde }} - Hasta: {{lote.estado.fecha_hasta}}</p>
+                      {% else %}
+                        <p class="fs-30 mb-2">Sin cultivo</p>
+                        <p>Ha totales: {{ lote.lote.ha_totales }} - Productivas: {{lote.lote.ha_productivas}} ({{lote.p|floatformat:0}}%)</p>                      {% endif %}
                     </div>
                 </div>
             </div>
         {% endfor %}
     </div>
-    <div class="row">
-      {% for campo in campos_con_lotes_1 %}
-          <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
-              {% if forloop.counter == 1 %}
-                  <div class="card card-tale">
-              {% elif forloop.counter == 2 %}
-                  <div class="card card-dark-blue">
-              {% endif %}
-                  <div class="card-body">
-                      <p class="mb-4">{{ campo.campo.nombre }}</p>
-                      <p class="fs-30 mb-2">{{ campo.lotes.0.ha_productivas }}</p>
-                      <p>{{ campo.lotes.0.ha_totales }} ({{ campo.lotes.0.porcentaje }}%)</p>
-                  </div>
-              </div>
-          </div>
-      {% endfor %}
-    </div>  
   </div>
   </div>
   <div class="row">
