--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -39,22 +39,22 @@
          <h3 class="card-title">Cotação Dolar</h3>
          <a href="#" class="text-info">View all</a>
         </div>
-          <div class="d-flex flex-wrap mb-5">
+          <div class="d-flex flex-wrap mb-5 align-text">
             <div class="mr-5 mt-3">
-              <p class="text-muted">Order value</p>
-              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.maximo|floatformat:2 }}</h3>
+              <p class="text-muted ">Apertura</p>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.apertura }}</h3>
             </div>
             <div class="mr-5 mt-3">
-              <p class="text-muted">Orders</p>
-              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.maximo|floatformat:2 }}</h3>
+              <p class="text-muted">Maximo</p>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.maximo }}</h3>
             </div>
             <div class="mr-5 mt-3">
-              <p class="text-muted">Users</p>
-              <h4 class="text-primary fs-20 font-weight-medium">{{ dolar_dia.minimo|floatformat:2 }}</h4>
+              <p class="text-muted">Minimo</p>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.minimo }}</h3>
             </div>
             <div class="mt-3">
-              <p class="text-muted">Downloads</p>
-              <h4 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.cierre|floatformat:2 }}</h4>
+              <p class="text-muted">cierre</p>
+              <h3 class="text-primary fs-30 font-weight-medium">{{ dolar_dia.cierre }}</h3>
             </div> 
     
          <canvas id="dolar-chart"></canvas>
@@ -641,6 +641,7 @@
     var lluvia_datas = [];
     var dolar_labels =[];
     var dolar_valor = [];
+    var dolar_dia =[];
 
     
    
@@ -660,24 +661,14 @@
     {% endfor %}
     console.log(lluvia_datas)
 
-    {% for mes, valor in datos_cotizacion.items %}
-    dolar_labels.push('{{ mes }}');
+    {% for valor in valores_dolar %}
     dolar_valor.push({{ valor }});
     {% endfor %}
 
-    // Ahora puedes utilizar los arreglos dolar_labels y dolar_valores en JavaScript.
-    console.log(dolar_labels);
-    console.log(dolar_valor);
-    </script>
-
-   
-
-
-
-
-
-
-
+    {% for mes in fechas_dolar %}
+    dolar_labels.push('{{ mes }}');    
+    {% endfor %}
+    
     var texto_grafico1 = '<div class="report-chart">';
       for (var i = 0; i < rubros_labels.length; i++) {
         texto_grafico1+='<div class="d-flex justify-content-between mx-4 mx-xl-5 mt-3"><div class="d-flex align-items-center"><div class="mr-3" style="width:20px; height:20px; border-radius: 50%; background-color: ' + rubros_colores[i] + '"></div><p class="mb-0">'+ rubros_labels[i] +'</p></div>'
@@ -694,7 +685,6 @@
       }
     texto_grafico2 += '</div>'
       
-  
   </script>
 
 {% endblock %}
