--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -90,8 +90,8 @@
     </a>
     <div class="collapse" id="Meteorologia">
       <ul class="nav flex-column sub-menu">
-        <li class="nav-item"> <a class="nav-link" href="\08">Alertas</a></li>
-        <li class="nav-item"> <a class="nav-link" href="\09">Mapa Meteorologico</a></li>
+        <li class="nav-item"> <a class="nav-link" href="meteorologia/">Tiempo</a></li>
+       
       </ul>
     </div>
   </li>
