--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -21,9 +21,9 @@
     </a>
     <div class="collapse" id="form-elements">
       <ul class="nav flex-column sub-menu">
-        <li class="nav-item"><a class="nav-link" href="/02-tipo">Tipos</a></li>
         <li class="nav-item"><a class="nav-link" href="/02-rubro">Rubros</a></li>
         <li class="nav-item"><a class="nav-link" href="/02">Productos</a></li>
+        <li class="nav-item"><a class="nav-link" href="/02-conf">Conf Producto</a></li>
       </ul>
     </div>
   </li>
